<resources>
    <string name="app_name">iMovies</string>

    <string name="movie_name_1">Guardians Of The Galaxy</string>
    <string name="movie_1_year">2014</string>
    <string name="movie_name_2">Doctor Strange</string>
    <string name="movie_2_year">2016</string>
    <string name="movie_name_3">Captain America - The Winter Solider</string>
    <string name="movie_3_year">2014</string>
    <string name="movie_name_4">Captain America</string>
    <string name="movie_4_year">2011</string>
    <string name="movie_name_5">Thor - The Dark World</string>
    <string name="movie_5_year">2013</string>
    <string name="movie_name_6">Iron Man 2</string>
    <string name="movie_6_year">2010</string>
    <string name="movie_name_7">Thor - Ragnarok</string>
    <string name="movie_7_year">2017</string>
    <string name="movie_name_8">Iron Man</string>
    <string name="movie_8_year">2008</string>
    <string name="movie_name_9">Thor</string>
    <string name="movie_9_year">2011</string>
    <string name="movie_name_10">Iron Man 3</string>
    <string name="movie_10_year">2013</string>

    <string name="movie_title">Not yet selected</string>
    <string name="movie_list_button">Pick a movie</string>
    <string name="description_hint">Enter item Description</string>
    <string name="date_button">Date</string>
    <string name="finish_button">Finish</string>

    <string name="movie_toast">Pick a movie</string>
    <string name="date_toast">Pick a date</string>

    <string name="add_movie_button">Add a movie</string>





</resources>