<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.additem.AddItemFragment"
    android:background="@color/softblack"
    android:padding="16dp">

    <TextView
        android:id="@+id/MovieName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/movie_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_list_button"
        android:backgroundTint="#e33c53"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/purple_500"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:hint="@string/description_hint"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/popcorn" />

    <Button
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_button"
        android:backgroundTint="#e33c53"/>

    <Button
        android:id="@+id/finish_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/finish_button"
        android:backgroundTint="#e33c53"/>


</LinearLayout>